--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve-prod": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build",
+    "build-prod": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "buefy": "^0.9.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "firebase": "^7.24.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.6",
+    "vuex": "^3.5.1",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
