--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buefy": "^0.9.3",
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.6",
     "vuex": "^3.5.1",
