--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.6",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.5.1",
     "vuex-persist": "^3.1.3"
   },
